Update .gitignore to include additional environment variants, TypeScript build info, coverage output, and build caches. This enhances project organization and ensures unnecessary files are excluded from version control.

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,16 @@ dist-ssr
 *.sw?
 admin_account
 .env
+
+# Env variants
+.env.*
+
+# TypeScript build info
+*.tsbuildinfo
+
+# Coverage output
+coverage/
+
+# Build caches
+.turbo/
+.eslintcache
